[tool.poetry]
name = "homematic-exporter"
version = "0.0.0"
description = "Prometheus Exporter for HomeMatic CCU2/3"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.19.0"
requests = "^2.31.0"
pyccu3 = {path = "pyccu3-0.0.2.tar.gz"}


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
homematic_exporter = "homematic_exporter.exporter:main"
